--- a/src/FrontBundle/Resources/public/css/main.css
+++ b/src/FrontBundle/Resources/public/css/main.css
@@ -293,12 +293,8 @@ form[id=login] button {
 /* Footer Center */
 
 #footer {
-    position: absolute;
-    bottom: 0;
     color: #fff;
-    font-weight: bold;
     width: 100%;
-    height: 60px;
     background-color: #101010;
 }
 
@@ -310,6 +306,10 @@ form[id=login] button {
     margin: 30px auto;
     height: 50px;
     font-size: 20px;
+}
+
+.navbar{
+    border-radius: 0px;
 }
 
 .navbar-inverse .navbar-brand {
@@ -606,7 +606,36 @@ form[id=login] button {
     background-color: #fcfcfc;
 }
 
+#aucun-voyage .mail{
+    font-size: 14px;
+    font-weight: initial;
+    font-style: italic;
+    margin-top: 20px;
+}
 
+#accroche{
+    margin-top: 66px;
+    background: #f7f7f7;
+    box-shadow: 0 3px 3px 0 rgba(50, 50, 50,0.2)
+}
+
+
+#accroche h3 {
+    font-weight: bold !important;
+    margin: 20px 0;
+    font-style: italic;
+}
+#accroche .content{
+    font-size: 17px;
+    line-height: 25px;
+}
+
+#accroche .content .second-bottom{
+    font-size: 14px;
+    font-style: italic;
+    margin: 15px 0;
+    color: #555;
+}
 
 a.button {
     -webkit-appearance: button;
@@ -615,6 +644,11 @@ a.button {
 
     text-decoration: none;
     color: initial;
+}
+
+.billet, .information{
+    background: #fff;
+    padding: 10px;
 }
 
 @media (max-width: 750px) {
