--- a/src/FrontBundle/Resources/views/Front/checkout.html.twig
+++ b/src/FrontBundle/Resources/views/Front/checkout.html.twig
@@ -80,7 +80,7 @@
                             <input type="hidden" name="business" value="etosylva@yahoo.fr">
                             <input type="hidden" name="currency_code" value="EUR">
                             <input type="hidden" name="item_name" value="train-commander">
-                            <input type="hidden" name="return" value="http://commander.io/app_dev.php/payment/success">
+                            <input type="hidden" name="return" value="http://commander.io/payment/success">
                             <input type="hidden" name="amount" value="{{ voyage.Prix }}">
                             <input id="pay" type="image" src="http://www.paypal.com/en_US/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="Payer">
                         </form>
