--- a/src/FrontBundle/Resources/views/layout.html.twig
+++ b/src/FrontBundle/Resources/views/layout.html.twig
@@ -64,7 +64,7 @@
             <ul class="nav navbar-nav navbar-right">
                 {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                     <li>
-                        <a href="{{ path('fos_user_profile_show') }}">Bonjour {{ app.user.nom | capitalize }} !</a>
+                        <a href="{{ path('fos_user_profile_show') }}">Bonjour {{ app.user.email | capitalize }} !</a>
                     </li>
                     <li>
                         <a href="{{ path('fos_user_security_logout') }}">Deconnexion</a>
